static/css/style.less
@import "material";
@import "theme";

.transition {
    @duration: .25s;
    @property: all;
    @delay: 0;
    @timing: ease;
    -webkit-transition: @property @duration @timing @delay;
    -moz-transition: @property @duration @timing @delay;
    -ms-transition: @property @duration @timing @delay;
    -o-transition: @property @duration @timing @delay;
    transition: @property @duration @timing @delay;
}

* {
    padding : 0;
    margin : 0;
}

p {
  margin: 12px 0;
}

.full-height-card {
      background: @text-background;
      color: @text-main;
      .with-shadow;
      top: 75px; /* Height of header and nav */
      //bottom:20px; /* Height of the footer element */
      padding: 10px;

}

body {
  background: @page-background;
  color: @text-main;

  height: 100%;

  font-family: Helvetica, Arial, sans-serif;

  #page-top {
    .top-bar(@primary-colour: @primary-colour);

    height: 56px;

    & > div {
      padding: 8px 4%;

      .offset {
        position: relative;
        top: -15px;
        left: 6px;
      }

      #header {
        .offset;
        display: inline-block;
        padding: 9px 0;
        font-size: 1.5em;
        min-width: 180px;
        border-right:  1px solid rgba(255,255,255, .6);
        height: 26px;
      }

      .heading-section {
        display: inline-block;
        height: 100%;
        padding: 12px;
        background: @lightened;
        .with-shadow;

        & * {
          margin: 0 6px;
          padding: 4px;
          border-radius: 2px;
          top: 0;
        }

      }
      #nav {
        .offset;
        .heading-section;
        .nav-section {
          display: inline;
          padding: 0;
          margin: 0;
        }


          .nav-other .nav-link{
            background: @text-background;
            .with-shadow;
          }
          .nav-current .nav-link {
            font-weight: bold;
            background: fadeout(@text-background, 10%);
            .with-shadow;
          }
      }

      #github {
        position: absolute;
        top: 0;
        right: 2%;
        margin: 10px;
        padding: 0;
        div {
          position: absolute;
          top: 1px;
          right: -10px;
          min-width: 200px;
          img {
            position: fixed;
            top: 12px;
            right: 0;
          }
          span{
            .with-shadow;
            position: relative;
            top: 10px;
            right: -30px;
            background: @text-background;
            padding: 10px 4px;
            border-radius: 2px;
            height: 10px;
            min-width: 150px;
            @media screen and (max-width: 800px) {
              display: none;
            }
          }
          @media screen and (max-width: 800px) {
            width: 60px;
          }
        }
      }
    }
  }
  #page-mid {

    #content {
      .section(@background-colour: @section-background;
               @heading-colour: @secondary-colour);

      background: @section-background;
      margin: 10px;
      padding: 10px;
      top: 75px; /* Height of header and nav */


      .accordion {
        .transition;

        .heading {
          color: @secondary-colour;
          margin: 10px;
          margin-top: 40px;
          .transition;
        }
        div {
          background: @text-background;
          .with-shadow;
          margin: 10px;
          padding: 10px;
        }
        .collapsible {
          visibility: visible;
          height: auto;
          margin-bottom: 20px;
          .transition;
          & > *{
            .transition;
          }
        }
      }
      @media screen {
        .contracted {
          background: @text-background;
          margin: 0;
          padding: 5px;
          .with-shadow;

          .heading {
            margin: 5px;
            padding: 0;
            font-size: 1.2em;
          }
          .collapsible {
            margin: 0;
            padding: 0;
            & > * {
              height: 0;
              font-size: 0;
              margin: 0;
              padding: 0;
            }

          }
        }
        
      }

      right: 30%;
      left : 2%;
      position: absolute;
    }

    #sidebar {
      .full-height-card;
      position: fixed;
      right: 2px;
      left: 72%;
    }
  }
  #footer {
    .bottom-bar(@primary-colour: @primary-colour);
    margin: auto;
    padding: 2px;
    padding-right: 4%;
    padding-left: 52%;
    height: 24px;
  }
}

.headshot {
  display: inline-block;
  background-image: url(http://www.gravatar.com/avatar/0c85ef5eb7678857e2a6b793dfe055a3.png);
  background-size: 40px 40px;
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.nav-sub {
  z-index: 30;
  position: absolute;
  visibility: hidden;
  height: 0;
  margin-top: 6px;
  .transition;
  div{
    .transition;
    visibility: none;
    height: 0;
    padding: 2px;

    a {
      font-size: 0;
      padding: 2px;
      .transition;
    }
  }
}
.nav-sub-shown {
  position: absolute;
  visibility: visible;
  opacity: 1;
  height: auto;
  .transition;
  div{
    margin: 2px;
    margin-bottom: 8px;
    visibility: visible;
    opacity: 1;
    height: auto;
    a {
      background: @text-background;
      .with-shadow;
      font-size: inherit;
    }
  }
}

/* Dimensions */

hr {
    margin : 1em;
}

ul li {
  padding: 0.5em;
  list-style-position: inside;
}

